<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.browse.FilterBottomSheet">

    <!--Event Categories-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_event_type"
        style="@style/ItemTitle"
        android:layout_marginTop="15dp"
        android:visibility="gone"/>
    <CheckBox
        android:id="@+id/cb_sports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_sports"
        android:visibility="gone"/>
    <CheckBox
        android:id="@+id/cb_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_music"
        android:visibility="gone"/>
    <CheckBox
        android:id="@+id/cb_arts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_arts"
        android:visibility="gone"/>
    <CheckBox
        android:id="@+id/cb_market"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_market"
        android:visibility="gone"/>

    <!-- Date Preferences-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="From Date / To Date (yyyy-MM-dd)"
        style="@style/ItemTitle"
        android:layout_marginTop="15dp"/>
    <EditText
        android:id="@+id/et_from_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="From (yyyy-MM-dd)"
        android:focusable="false"
        android:inputType="none"
        android:minHeight="48dp"
        android:padding="8dp"/>
    <EditText
        android:id="@+id/et_to_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="To (yyyy-MM-dd)"
        android:focusable="false"
        android:inputType="none"
        android:minHeight="48dp"
        android:padding="8dp"/>

    <Switch
        android:id="@+id/sw_open_only"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:minHeight="48dp"
        android:text="Open events only" />
    <Switch
        android:id="@+id/sw_geo_only"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="Geolocation enabled events only" />

    <!-- Buttons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="15dp">
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/LotteryButton.Neutral"/>

        <Button
            android:id="@+id/btn_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirm Filter"
            android:layout_marginStart="12dp"
            style="@style/LotteryButton.Entrant"/>
    </LinearLayout>

</LinearLayout>


