<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_create_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
                android:id="@+id/cb_location_consent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="I agree to share my approximate location for organizers of events I joined." />

            <Button
                android:id="@+id/btn_create_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:text="@string/create_profile"
                style="@style/LotteryButton.Entrant" />
...
