<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_browse"
        android:icon="@drawable/ic_browse"
        android:title="@string/browse" />
    <item
        android:id="@+id/nav_my_events"
        android:icon="@drawable/ic_event"
        android:title="@string/my_events" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notifications_24"
        android:title="@string/notifications" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person_24"
        android:title="@string/profile" />
</menu>
